# pyubci

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
pyubci/: __init__.py  cli.py  ubci.py
